exemplo -> calculos_hematimetricos and create calculates pages

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.exemplo">
+    package="com.example.calculos_hematimetricos">
    <application
-        android:label="exemplo"
+        android:label="calculos_hematimetricos"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
